# MyTona_test_first_part

./: CMakeLists.txt  MyTonaTest  Solution.h  Task.cpp  Task.h  main.cpp
descriptions/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
solutions/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
